[tool.poetry]
name = "yabd"
version = "0.2.1"
description = "Yet Another Brightness Daemon"
authors = ["Tristan Brugère <67050900+tbrugere@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sdbus = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yabd = 'yabd:main'
