[project]
name = "yabd"
version = "0.3.0"
description = "Yet Another Brightness Daemon"
authors = [{ name = "Tristan Brugère", email = "67050900+tbrugere@users.noreply.github.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Cecill-B"
dependencies = ["sdbus>=0.12.0,<0.13"]

[project.scripts]
yabd = "yabd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
